[package]
name = "smhi"
version = "0.1.2"
edition = "2018"
license = "MIT"
description = "A library for integrating with SMHI."
repository = "https://github.com/third-act/smhi/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1", features = ["full"] }